# COS

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  git-get-data.ps1  git-get-date.sh
HDL/: CMakeLists.txt  button.c  hdl.h  hdl_base.h  hdl_iface.h  hdl_portable.h  hdl_system.c  syscalls.c
HDL/ADC/Src/: ms5194t.c
HDL/ATB/Inc/: atb_uio.h  plc_io.h
HDL/ATB/Src/: plc_io.c
HDL/Basic/Inc/: Interrupt.h  hdl_adc.h  hdl_basic_isr_buffer.h  hdl_buffer.h  hdl_button.h  hdl_callback.h  hdl_clock.h  hdl_clock_counter.h  hdl_core.h  hdl_dma.h  hdl_event.h  hdl_gpio.h  hdl_heap.h  hdl_hw.h  hdl_i2c.h  hdl_i2c_client.h  hdl_i2c_server.h  hdl_i2c_sw.h  hdl_module.h  hdl_nvm.h  hdl_portable.h  hdl_shift_reg.h  hdl_spi.h  hdl_stream_buffer.h  hdl_sw_wdt.h  hdl_sys.h  hdl_sys_timer.h  hdl_tick_counter.h  hdl_time_counter.h  hdl_timer.h  hdl_timer_event.h  hdl_transceiver.h  hdl_uart.h
HDL/Basic/Src/: hdl_basic_isr_buffer.c  hdl_buffer.c  hdl_button.c  hdl_clock.c  hdl_clock_counter.c  hdl_event.c  hdl_heap.c  hdl_hw.c  hdl_i2c.c  hdl_i2c_sw.c  hdl_module.c  hdl_stream_buffer.c  hdl_sw_wdt.c  hdl_sys.c  hdl_sys_timer.c  hdl_time_counter.c  hdl_timer.c  hdl_timer_event.c
HDL/Command/Inc/: hdl_command.h
HDL/Command/Src/: hdl_command.c
HDL/DTSI/: dtsi_gd32e230.c
HDL/EEPROM/Inc/: hdl_eeprom_i2c.h
HDL/EEPROM/Src/: hdl_eeprom_i2c.c
HDL/I2CBus/EEPROM/Inc/: hdl_eeprom_i2c.h
HDL/I2CBus/EEPROM/Src/: hdl_eeprom_i2c.c
HDL/I2CBus/GPIO/Inc/: XL9535.h
HDL/I2CBus/GPIO/Src/: XL9535.c
HDL/I2CBus/PMIC/Inc/: RK809.h
HDL/I2CBus/PMIC/Src/: RK809.c
HDL/Inc/: button.h  hdl.h  hdl_button.h  hdl_gpio.h  hdl_portable.h  hdl_sys.h  portable.h
HDL/McuPort/: CMakeLists.txt
HDL/McuPort/ARM/: CMakeLists.txt  port_core.c  port_core.h  port_core_m0+.c  port_core_m23.c  port_core_m3.c  port_core_m4.c
HDL/McuPort/ARM/Gigadevice/: CMakeLists.txt  port_clock.c  port_dma.c  port_exti.c  port_gpio.c  port_i2c.c  port_i2c.old  port_spi_client.c  port_spi_common.c  port_spi_server.c  port_spi_server_dma.c  port_tick_counter.c  port_time_counter.c
HDL/McuPort/ARM/Gigadevice/GD32E23X/: CMakeLists.txt
HDL/McuPort/ARM/Gigadevice/GD32F103/: CMakeLists.txt
HDL/McuPort/ARM/Gigadevice/GD32F103VG/: CMakeLists.txt
HDL/McuPort/ARM/Gigadevice/GD32F450/: CMakeLists.txt
HDL/McuPort/ARM/Gigadevice/GD32F450ZI/: CMakeLists.txt
HDL/McuPort/ARM/Gigadevice/Inc/: port_core.h  port_exti.h  port_flash.h  port_i2c.h  port_nvm.h
HDL/McuPort/ARM/Nuvoton/: CMakeLists.txt
HDL/McuPort/ARM/Nuvoton/NUM46X/: CMakeLists.txt
HDL/McuPort/ARM/ST/: CMakeLists.txt  port_exti.c
HDL/McuPort/PortTemplate/: port_core.c
HDL/McuPort/PortTemplate/Inc/: port_adc.h  port_core.h  port_i2c.h  port_tick_counter.h
HDL/PMIC/Inc/: RK809.h
HDL/SPIBus/ADC/Inc/: ms5194t.h
HDL/SPIBus/ADC/Src/: ms5194t.c
HDL/Smarc/Inc/: smarc_carrier.h  smarc_module.h
HDL/Smarc/Src/: smarc_carrier.c  smarc_module.c
HDL/Src/: hdl_button.c
Projects/: CMakeLists.txt
Projects/ATB3500/: CMakeLists.txt  app.c  communication.c  mig_gd32f450zi.c
Projects/ATB3500/BLDL/: atb3500_flash_serial.c  atb3500_i2c_gateway.c  atb3500_io.c  atb3500_power_domain.c  atb3500_rs485_ctrl.c  atb3500_watchdog.c
Projects/ATB3500/BLDL/Inc/: atb3500_flash_serial.h  atb3500_i2c_gateway.h  atb3500_io.h  atb3500_power_domain.h  atb3500_rs485_ctrl.h  atb3500_watchdog.h
Projects/ATB3500/Inc/: app.h  mig.h
Projects/ATB_MUVV/: CMakeLists.txt  app.c  mig_gd32e230.c  test_gd32e230_i2c.c
Projects/ATB_MUVV/Inc/: mig.h
Projects/ATB_MUVV_R0/: CMakeLists.txt  app.c  i2c_slave.c  mig_stm32l070.c  protocol.c  registers.c
Projects/ATB_MUVV_R0/Inc/: app.h  i2c_slave.h  mig.h  protocol.h  registers.h
Projects/ATB_RK3568J_SMC/: CMakeLists.txt  app.c  mig_gd32e230.c  mig_num463.c  mig_stm32l070.c
Projects/ATB_RK3568J_SMC/BLDL/Inc/: bldl_som_boot_lock.h  bldl_som_boot_select.h  bldl_som_state.h
Projects/ATB_RK3568J_SMC/BLDL/Src/: bldl_som_boot_lock.c  bldl_som_boot_select.c  bldl_som_state.c  bldl_uspd_io.c
Projects/ATB_RK3568J_SMC/Inc/: mig.h
Projects/ATB_USPD20K/: CMakeLists.txt  README.md  app.c  app_tmp.c  mig_app.c  mig_gd32e230.c  mig_gd32f103vg.c
Projects/ATB_USPD20K/BLDL/: hdl_eeprom_i2c.c  median_filter.c  ms5194t.c  som_link.c  uspd_ain_port.c
Projects/ATB_USPD20K/BLDL/Inc/: hdl_eeprom_i2c.h  median_filter.h  ms5194t.h  som_link.h  uspd_ain_port.h
Projects/ATB_USPD20K/Inc/: app.h  mig.h
Projects/ATB_USPD20K_MB_C0_A/: README.md  mig_app.c  mig_gd32e230.c
Projects/ATB_USPD20K_MB_C0_A/BLDL/: median_filter.c  uspd_ain_port.c
Projects/ATB_USPD20K_MB_C0_A/BLDL/Inc/: uspd_ain_port.h
Projects/ATB_USPD20K_MB_C0_A/Inc/: app.h  mig.h
Projects/ATB_USPD20K_MB_C0_D/: app.c  mig_app.c  mig_gd32e230.c
Projects/ATB_USPD20K_MB_C0_D/BLDL/: som_link.c  uspd_ain_port.c  uspd_dio.c
Projects/ATB_USPD20K_MB_C0_D/BLDL/Inc/: som_link.h  uspd_ain_port.h  uspd_dio.h
Projects/ATB_USPD20K_MB_C0_D/Inc/: app.h  mig.h
Projects/ATB_USPD_MPC/: CMakeLists.txt  app.c  mig_gd32f103vg.c
Projects/ATB_USPD_MPC/BLDL/Inc/: bldl_uspd_io.h
Projects/ATB_USPD_MPC/BLDL/Src/: bldl_uspd_io.c  plc_io.c
Projects/ATB_USPD_MPC/Inc/: app.h  mig.h
Projects/ATB_USPD_MPC2/: CMakeLists.txt  mig_gd32e230.c
Projects/ATB_USPD_MPC2/Inc/: app.h  mig.h
Projects/DEMO/: CMakeLists.txt  app.c  app_gpio.c  app_modbus.c  app_modbus_client.c  app_modbus_server.c  app_modules.c  app_spi_client.c  app_uart_stream.c  mig_gd32e230.c  mig_gd32f103vg.c  mig_gd32f450zi.c  mig_num463.c  mig_stm32f407.c
Projects/DEMO/Inc/: app.h  mig.h
Projects/DEMO/MIG/: mig_gd32e230.c  mig_gd32f103vg.c  mig_gd32f450zi.c  mig_num463.c  mig_stm32f407.c
Projects/DEMO_GD32E23X/: CMakeLists.txt  app.c  mig_gd32e230.c
Projects/DEMO_GD32E23X/Inc/: app.h  mig.h
Projects/DEMO_NUM463KG/: CMakeLists.txt  app.c  mig_num463.c
Projects/DEMO_NUM463KG/Inc/: app.h  mig.h
Projects/GD32E23X_DEMO/: CMakeLists.txt  app.c  mig_gd32e230.c
Projects/NUM463KG_DEMO/: app.c  mig_num463.c
Projects/NUM463KG_DEMO/Inc/: app.h  mig.h
Projects/TEST_GD32E23X/: app.c  mig_gd32e230.c
(+485 files in other folders)
