
file(GLOB SRC
  "${CMAKE_CURRENT_SOURCE_DIR}/Basic/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/ADC/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/EEPROM/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/PMIC/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/Smarc/Src/*.c"
)

set_property(GLOBAL PROPERTY HDL_HEADERS
  "${CMAKE_CURRENT_SOURCE_DIR}/"
  "${CMAKE_CURRENT_SOURCE_DIR}/Basic/Inc"
  "${CMAKE_CURRENT_SOURCE_DIR}/ADC/Inc"
  "${CMAKE_CURRENT_SOURCE_DIR}/EEPROM/Inc"
  "${CMAKE_CURRENT_SOURCE_DIR}/PMIC/Inc"
  "${CMAKE_CURRENT_SOURCE_DIR}/Smarc/Inc"
)

set_property(GLOBAL PROPERTY HDL_SOURCES ${SRC})

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/McuPort")
