
file(GLOB SRC
  "${CMAKE_CURRENT_SOURCE_DIR}/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/Basic/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/SPIBus/ADC/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/I2CBus/EEPROM/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/I2CBus/GPIO/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/I2CBus/PMIC/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/Smarc/Src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/Proto/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/Other/*.c"
)

set_property(GLOBAL PROPERTY HDL_HEADERS
  "${CMAKE_CURRENT_SOURCE_DIR}/"
  "${CMAKE_CURRENT_SOURCE_DIR}/Basic/Inc"
  "${CMAKE_CURRENT_SOURCE_DIR}/SPIBus/ADC/Inc"
  "${CMAKE_CURRENT_SOURCE_DIR}/I2CBus/EEPROM/Inc"
  "${CMAKE_CURRENT_SOURCE_DIR}/I2CBus/GPIO/Inc"
  "${CMAKE_CURRENT_SOURCE_DIR}/I2CBus/PMIC/Inc"
  "${CMAKE_CURRENT_SOURCE_DIR}/Smarc/Inc"
  "${CMAKE_CURRENT_SOURCE_DIR}/Proto"
  "${CMAKE_CURRENT_SOURCE_DIR}/Other"
)

set_property(GLOBAL PROPERTY HDL_SOURCES ${SRC})

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/McuPort")
