#set(BOARD "ATB_RK3568J_SMC_R0")
#set(BOARD "ATB_RK3568J_SMC_R1")
#set(BOARD "ATB_RK3568J_SMC_R3")

set(BOARD "ATB_USPD20K_MB_C0_A")
#set(BOARD "ATB_USPD_MPC3_A")
#set(BOARD "ATB_USPD20K_MB_C0_D")
#set(BOARD "ATB_USPD_MPC3_D")

#set(BOARD "ATB3500")

#set(BOARD "ATB_MUVV_R0")

#set(BOARD "DEMO_GD32F103")
#set(BOARD "DEMO_GD32E23X")
#set(BOARD "TEST_GD32E23X")
#set(BOARD "DEMO_NUM463KG")
#set(BOARD "")


set(dir "${CMAKE_CURRENT_SOURCE_DIR}/${BOARD}")
if((BOARD STREQUAL "ATB_RK3568J_SMC_R3") OR 
   (BOARD STREQUAL "ATB_RK3568J_SMC_R1") OR
   (BOARD STREQUAL "ATB_RK3568J_SMC_R0"))
  add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/ATB_RK3568J_SMC")
elseif((BOARD STREQUAL "ATB_USPD_MPC3_D") OR (BOARD STREQUAL "ATB_USPD20K_MB_C0_D"))
  add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/ATB_USPD_MPC3_D")
elseif((BOARD STREQUAL "ATB_USPD_MPC3_A") OR (BOARD STREQUAL "ATB_USPD20K_MB_C0_A"))
  add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/ATB_USPD_MPC3_A")
elseif (EXISTS "${dir}")
  add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/${BOARD}")
else()
  message( SEND_ERROR "Board (${BOARD}) not supported!" )
endif()

set_property(GLOBAL APPEND PROPERTY PROJECT_DEFINITIONS 
  ${BOARD}
)

set_property(GLOBAL PROPERTY BOARD ${BOARD})
