#set(BOARD "DEMO_GD32F103")
#set(BOARD "DEMO_GD32E23X")
set(BOARD "DEMO_STM32F407")
#set(BOARD "DEMO_NUM463KG")
#set(BOARD "DEMO_GD32F450")


set(dir "${CMAKE_CURRENT_SOURCE_DIR}/${BOARD}")
if((BOARD STREQUAL "DEMO_GD32F103") OR 
   (BOARD STREQUAL "DEMO_GD32E23X") OR 
   (BOARD STREQUAL "DEMO_STM32F407") OR 
   (BOARD STREQUAL "DEMO_NUM463KG") OR 
   (BOARD STREQUAL "DEMO_GD32F450"))
  add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/DEMO")
elseif (EXISTS "${dir}")
  add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/${BOARD}")
else()
  message( SEND_ERROR "Board (${BOARD}) not supported!" )
endif()

set_property(GLOBAL APPEND PROPERTY PROJECT_DEFINITIONS 
  ${BOARD}
)

set_property(GLOBAL PROPERTY BOARD ${BOARD})
