
set_property(GLOBAL PROPERTY TOOLCHAIN_DIR "")
set_property(GLOBAL PROPERTY TOOLCHAIN_PREFIX "arm-none-eabi-")

set_property(GLOBAL PROPERTY CORE "ARM")

# Set terget core name
if(BOARD STREQUAL "DEMO_STM32F407")
  set_property(GLOBAL PROPERTY MCU "STM32F407VG")
  set_property(GLOBAL PROPERTY MCU_MANUFACTURER "ST")
  set_property(GLOBAL PROPERTY PROJECT "STM32F407VG_DEMO")
  set_property(GLOBAL PROPERTY PROJECT_DEFINITIONS 
    "STM32F407xx"
    "STM32F407VG"
  )
elseif(BOARD STREQUAL "DEMO_GD32E23X")
  set_property(GLOBAL PROPERTY MCU "GD32E230C6")
  set_property(GLOBAL PROPERTY MCU_MANUFACTURER "Gigadevice")
  set_property(GLOBAL PROPERTY PROJECT "GD32E23X_DEMO")
  set_property(GLOBAL PROPERTY PROJECT_DEFINITIONS 
    "GD32E230"
  )
elseif(BOARD STREQUAL "DEMO_STM32L071")
  set_property(GLOBAL PROPERTY MCU_MANUFACTURER "ST")
  set_property(GLOBAL PROPERTY MCU "STM32L071KB")
  set_property(GLOBAL PROPERTY PROJECT_DEFINITIONS 
    "STM32L071xx"
    "STM32L071KB"
  )
elseif(BOARD STREQUAL "DEMO_GD32F103")
  set_property(GLOBAL PROPERTY MCU_MANUFACTURER "Gigadevice")
  set_property(GLOBAL PROPERTY MCU "GD32F103VG")
  set_property(GLOBAL PROPERTY PROJECT "GD32F103_DEMO")
  set_property(GLOBAL PROPERTY PROJECT_DEFINITIONS 
    "GD32F103" 
    "GD32F10X_MD"
  )
elseif(BOARD STREQUAL "DEMO_GD32F450")
  set_property(GLOBAL PROPERTY MCU_MANUFACTURER "Gigadevice")
  set_property(GLOBAL PROPERTY MCU "GD32F450ZI")
  set_property(GLOBAL PROPERTY PROJECT "GD32F450_DEMO")
  set_property(GLOBAL PROPERTY PROJECT_DEFINITIONS 
    "GD32F450"
  )
elseif(BOARD STREQUAL "DEMO_NUM463KG")
  set_property(GLOBAL PROPERTY MCU_MANUFACTURER "Nuvoton")
  set_property(GLOBAL PROPERTY MCU "M463KGCAE")
  set_property(GLOBAL PROPERTY PROJECT "M463KGCAE_DEMO")
  set_property(GLOBAL PROPERTY PROJECT_DEFINITIONS 
    "NUM463" 
  )
endif()

# Add you header dirs
set_property(GLOBAL PROPERTY PROJECT_HEADERS
  "${CMAKE_CURRENT_SOURCE_DIR}/Inc"
  "${CMAKE_CURRENT_SOURCE_DIR}/BLDL/Inc"
)

# Add you source files
file(GLOB SRC
  "${CMAKE_CURRENT_SOURCE_DIR}/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/MIG/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/BLDL/*.c"
)

set_property(GLOBAL PROPERTY PROJECT_SOURCES ${SRC})

add_subdirectory("${PROJECT_SOURCE_DIR}/ThirdParty/td8125010" "${CMAKE_CURRENT_BINARY_DIR}/td8125010_lib")
add_subdirectory("${PROJECT_SOURCE_DIR}/ThirdParty/ckbt_epm30" "${CMAKE_CURRENT_BINARY_DIR}/ckbt_epm30_lib")
